2001-05-15  Alex Samuel  <samuel@codesourcery.com>

	* qm/track/triggers/notification.py
	(NotifyByUidFieldTrigger.Preupdate): Fix syntax.

2001-05-15  Alex Samuel  <samuel@codesourcery.com>

	* qm/track/triggers/notification.py
	(NotifyByUidFieldTrigger.Preupdate): Don't subscribe a user twice.
	* qm/common.py (Enumeral.__cmp__): Handle TypeError.

2001-05-15  Alex Samuel  <samuel@codesourcery.com>

	* qm/track/triggers/notification.py
	(NotifyByUidFieldTrigger.Preupdate): Handle new issues correctly.

2001-05-15  Alex Samuel  <samuel@codesourcery.com>

	* qm/track/issue_class.py (IssueClass.__init__): Adjust default
	state model.
	* qm/track/issue.py (eval_revision_expression): Improve doc
	string.  Add _new to namespace.
	* qm/track/config.py (setup_idb_for_internal_use): Adjust.
	* qm/track/triggers/notification.py
	(_NotifyTrigger.__MakeMessage): Handle new issues correctly.

2001-05-15  Alex Samuel  <samuel@codesourcery.com>

	* qm/platform.py: Remove contents and split it into...
	* qm/platform_linux.py: ... this new file, and...
	* qm/platform_win32.py: ... this, likewise.
	* qm/track/server.py (execute): Let SignalException through.
	* qm/track/qmtrack.in: Handle SignalException.
	* qm/track/memory_idb.py (MemoryIdb.Close): Call __Write.
	(MemoryIdb.__Write): New method.
	(MemoryIdb.AddIssueClass): Call __Write.
	(MemoryIdb.__InsertIssue): Likewise.
	* qm/test/qmtest.in: Import qm.platform.

2001-05-14  Alex Samuel  <samuel@codesourcery.com>

	* qm/web.py (make_url_for_request): Remove.
	Use AsUrl instead of make_url_for_request throughout.
	* qm/fields.py: Likewise.
	* qm/test/web/show.py: Likewise.
	* qm/test/web/suite.py: Likewise.
	* qm/test/web/web.py: Likewise.
	* qm/track/web/index.py: Likewise.
	* qm/track/web/show.py: Likewise.
	* qm/track/web/summary.py: Likewise.
	* qm/track/web/web.py: Likewise.
	
2001-05-14  Alex Samuel  <samuel@codesourcery.com>

	* qm/web.py (WebRequestHandler.__HandlePageCacheRequest): New
	method. 